--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.google.android.gms:play-services:10.0.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     testCompile 'junit:junit:4.12'
 }
