--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+        javaMaxHeapSize "4g" //specify the heap size for the dex process
+    }
+    defaultConfig {
+        multiDexEnabled true
+    }
 }
 
 dependencies {
@@ -35,7 +41,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services:9.8.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     testCompile 'junit:junit:4.12'
@@ -44,3 +50,4 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     provided "org.projectlombok:lombok:1.12.6"
 }
+
