--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
@@ -49,5 +50,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     provided "org.projectlombok:lombok:1.12.6"
+
+    compile "org.parceler:parceler-api:1.1.1"
+    apt "org.parceler:parceler:1.1.1"
 }
 
