show all lost and found

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,10 @@ ATTENTION: This was auto-generated to add Google Play services to your project f
         <activity
             android:name=".FoundPostDetail"
             android:label="@string/title_activity_found_post_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LostPostAcitivity"
+            android:label="@string/title_activity_lost_post_acitivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
