--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
 
     compile "org.parceler:parceler-api:1.1.1"
     apt "org.parceler:parceler:1.1.1"
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:gridlayout-v7:25.1.0'
 }
 
