--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,4 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
 }
-
+apply plugin: 'com.google.gms.google-services'
