--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.siriporn.dogfindertest"
         minSdkVersion 15
@@ -34,26 +34,25 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.github.bumptech.glide:glide:3.5.2'
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
+
+
+
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.google.android.gms:play-services:9.8.0'
-
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    provided "org.projectlombok:lombok:1.12.6"
-
-    compile "org.parceler:parceler-api:1.1.1"
-    apt "org.parceler:parceler:1.1.1"
+    compile 'org.parceler:parceler-api:1.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
+    testCompile 'junit:junit:4.12'
+    apt 'org.parceler:parceler:1.1.1'
+    provided 'org.projectlombok:lombok:1.12.6'
 }
 apply plugin: 'com.google.gms.google-services'
