--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.google.android:flexbox:0.3.0'
     testCompile 'junit:junit:4.12'
     apt 'org.parceler:parceler:1.1.1'
     provided 'org.projectlombok:lombok:1.12.6'
